service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-library-app
spec:
  #type: NodePort
  selector:
    app: shared-library-app
  ports:
    - port: 80
      targetPort: 5001
