ingress_local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  #ingressClassName: nginx
  rules:
  - host: example.local
    http:
      paths:
      - path: /home/api/data
        pathType: Prefix
        backend:
          service:
            name: shared-library-app
            port:
              number: 80
